完善好友聊天